Change central options with 2022.2 and DWS