@@ -1,19 +1,5 @@
--Xms128m
--Xmx3072m
--XX:SoftRefLRUPolicyMSPerMB=50
--ea
--XX:CICompilerCount=2
--Djdk.http.auth.tunneling.disabledSchemes=""
--XX:+HeapDumpOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--Djdk.attach.allowAttachSelf=true
--Dkotlinx.coroutines.debug=off
--Djdk.module.illegalAccess.silent=true
 -Dide.no.platform.update=true
--Dsun.io.useCanonCaches=false
--XX:ReservedCodeCacheSize=512m
--XX:+UseG1GC
--Dsplash=true
--Dtoolbox.notification.token=-VEh9crxHi87ETnljW9pa5G6fmW4vm7Mtk98pccvE-0=
--Dtoolbox.notification.portFile=C:\local\P\JetBrains\Toolbox\apps\IDEA-U\ch-0\212.4746.92.vmoptions.port
--Didea.plugins.path=C:\\local\\P\\JetBrains\\Toolbox\\apps\\IDEA-U\\ch-0\\212.4746.92.plugins
+-Dtoolbox.notification.token=hst2GYVz5V2_Aj3nvwQjIkxIzBSb_G6vJGBjYXjvN9E=
+-Dtoolbox.notification.portFile=C:\Users\a742038\AppData\Local\JetBrains\Toolbox\apps\IDEA-U\ch-0\222.4345.14.vmoptions.port
+-Didea.plugins.path=C:\\Users\\a742038\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-U\\ch-0\\222.4345.14.plugins
+-Xmx2048m
